--- a/style.css
+++ b/style.css
@@ -122,6 +122,12 @@ nav ul{
          height: 930px;
          background-color: rgb(255, 255, 255);
      }
+
+     .navbar-nav{
+         background-color: tomato;
+         padding-left: 10px;
+     }
+
   }
   @media (min-width: 768px) and (max-width: 991.98px) {
     .section-2{
@@ -150,13 +156,6 @@ nav ul{
 
 
 
-
-
-
-
-
-
-
 .section-2 h1,.section-4 h1, .section-5 h1, .section-6 h1, .section-7 h1, .section-8 h1, .section-9 h1, .section-10 h1{
     font-family: 'Nautilus Pompilius', sans-serif;
     font-size: 5vw;
@@ -166,12 +165,11 @@ nav ul{
 .section-2 h5{
     font-weight: 900;
 }
-.section-2-images{
-    /* margin-left: 10%; */
-}
+ 
 .section-2-images img{
     border: 10px solid rgb(240, 236, 236);
     border-radius: 100%;
+    max-width: 95%;
 }
  
 /* .section-3{
