--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ nav{
 }
 nav ul{
     padding-top: 30px;
+  
 }
 
 .baner{
@@ -41,9 +42,7 @@ nav ul{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    /* background-size: 100%; */
-    /* margin-top: 88px;
-    max-height: 625px; */
+    
 }
 .baner-box{
      
@@ -51,7 +50,7 @@ nav ul{
 }
 .baner-button{
     
-    /* margin-left: 39%; */
+ 
     border: 3px solid rgb(150, 44, 11);
     color: aliceblue;
     font-size: 2.5vw;
@@ -124,7 +123,7 @@ nav ul{
      }
 
      .navbar-nav{
-         background-color: tomato;
+        background-image: linear-gradient(red, green);
          padding-left: 10px;
      }
 
